// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkModalDialog should render correctly 1`] = `
<section
  aria-labelledby="bpk-modal-heading-my-modal"
  className="bpk-modal bpk-modal--full-screen-mobile"
  id="my-modal"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-modal__header"
  >
    <h2
      className="bpk-modal__heading"
      id="bpk-modal-heading-my-modal"
    >
      Modal title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-modal__close-button"
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-modal__content"
  >
    Modal content
  </div>
</section>
`;

exports[`BpkModalDialog should render correctly when it does not fills the screen on mobile 1`] = `
<section
  aria-labelledby="bpk-modal-heading-my-modal"
  className="bpk-modal"
  id="my-modal"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-modal__header"
  >
    <h2
      className="bpk-modal__heading"
      id="bpk-modal-heading-my-modal"
    >
      Modal title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-modal__close-button"
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-modal__content"
  >
    Modal content
  </div>
</section>
`;

exports[`BpkModalDialog should render correctly when it has a className 1`] = `
<section
  aria-labelledby="bpk-modal-heading-my-modal"
  className="bpk-modal my-classname bpk-modal--full-screen-mobile"
  id="my-modal"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-modal__header"
  >
    <h2
      className="bpk-modal__heading"
      id="bpk-modal-heading-my-modal"
    >
      Modal title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-modal__close-button"
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-modal__content"
  >
    Modal content
  </div>
</section>
`;

exports[`BpkModalDialog should render correctly when it is fullscreen 1`] = `
<section
  aria-labelledby="bpk-modal-heading-my-modal"
  className="bpk-modal bpk-modal--full-screen"
  id="my-modal"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-modal__header"
  >
    <h2
      className="bpk-modal__heading"
      id="bpk-modal-heading-my-modal"
    >
      Modal title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-modal__close-button"
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-modal__content"
  >
    Modal content
  </div>
</section>
`;

exports[`BpkModalDialog should render correctly with closeText prop 1`] = `
<section
  aria-labelledby="bpk-modal-heading-my-modal"
  className="bpk-modal my-classname bpk-modal--full-screen-mobile"
  id="my-modal"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-modal__header"
  >
    <h2
      className="bpk-modal__heading"
      id="bpk-modal-heading-my-modal"
    >
      Modal title
    </h2>
     
    <button
      className="bpk-link"
      onClick={[Function]}
      type="button"
    >
      Dismiss
    </button>
  </header>
  <div
    className="bpk-modal__content"
  >
    Modal content
  </div>
</section>
`;

exports[`BpkModalDialog should render correctly with wide prop 1`] = `
<section
  aria-labelledby="bpk-modal-heading-my-modal"
  className="bpk-modal bpk-modal--wide my-classname bpk-modal--full-screen-mobile"
  id="my-modal"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-modal__header"
  >
    <h2
      className="bpk-modal__heading"
      id="bpk-modal-heading-my-modal"
    >
      Modal title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-modal__close-button"
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-modal__content"
  >
    Modal content
  </div>
</section>
`;
